<resources>
    <string name="what_s_happening">Add a description or name for this live</string>
    <string name="tips">Tip: Write a title before you start your broadcast and meet people with similar interests!</string>
    <string name="tips2">Tip: Be sure to broadcast for atleast few minutes to make it easier for people to find you.</string>
    <string name="go_live">Go Live</string>
    <string name="camera_microphone_storage_permission_error">Enable camera, microphone and storage permissions</string>
    <string name="camera_error">Enable camera permission</string>
    <string name="storage_error">Enable storage permission</string>
    <string name="camera_storage_error">Enable camera and storage permissions</string>
    <string name="camera_microphone_permission_error">Enable camera and microphone permissions</string>
    <string name="my_video">My video</string>
    <string name="no_videos">No videos</string>
    <string name="really_remove_from_list">Do you really want to remove the video from the list?</string>
    <string name="live_streams">Live streams</string>
    <string name="using_video_capture">Using video capture?</string>
    <string name="back_camera">Back camera</string>
    <string name="capture_setting">Capture setting</string>
    <string name="rear_camera">Front camera</string>
    <string name="stop_broadcasting">Stop broadcasting</string>
    <string name="broadcast_details">Broadcast details</string>
    <string name="hide_chat">Hide chat</string>
    <string name="report_broadcast">Report Broadcast</string>
    <string name="delete_broadcast">Delete Broadcast</string>
    <string name="really_delete_video">Are you sure want to delete video?</string>
    <string name="total_viewers">Total viewers</string>
    <string name="duration">Duration</string>
    <string name="total_likes">Total likes</string>
    <string name="live_viewers">Live viewers</string>
    <string name="comments">Comments</string>
    <string name="report_user">Report user</string>
    <string name="broadcast_deactivated_by_admin">Broadcast has been blocked by Admin</string>
    <string name="undo_report_broadcast">Undo Report Broadcast</string>
    <string name="video_deleted_successfully">Video deleted successfully</string>
    <string name="undo_report_successfully">Undo Report successfully</string>
    <string name="initializing">Initializing…</string>
    <string name="no_broadcast_found">No broadcast found</string>
    <string name="live">Live</string>
    <string name="double_tap_to_flip_camera">Double tap to Flip camera</string>
    <string name="you_are_now">You are now</string>
    <string name="your_broadcast_deactivated_by_admin">Your broadcast has been blocked by Admin</string>
    <string name="stop_publish_description">Do you really want to stop publish?</string>
    <string name="camera_not_running_properly">Camera is not running properly</string>
    <string name="streaming_not_finished">Your previous broadcast still sends packets due to slow internet speed</string>
    <string name="oopps_shouldnt_happen">Oopps this shouldn\'t be happened. Please let the library developer this status</string>
    <string name="broadcast_connection_lost">Connection to media server is lost</string>
    <string name="low_bandwidth">Network speed is low. Latency is increasing.</string>
    <string name="not_eligible_for_broadcast">Your device is not eligible to broadcast. There is no hardware encoder.</string>
    <string name="no_network_connectivity">You\'re not connected to any network. Please connect to Internet</string>
    <string name="stop">Stop</string>
    <string name="permission_is_required">Camera and Microphone permission is required to run this app</string>
    <string name="permission">Permission</string>
    <string name="need_permission">Need Permissions to Access!</string>
    <string name="app_doesnot_work_without_permissions">App does not work without permissions. Please give Camera and Record Audio permission on app settings</string>
    <string name="first_call_open_camera">First call openCamera function</string>
    <string name="only_one_camera_exists">Only one camera exists in this device</string>
    <string name="camera_permission_is_required">Camera permission is required to run this app</string>
    <string name="microphone_permission_is_required">Microphone permission is required to run this app</string>
    <string name="your_stream_end_description">Your streaming is ended now</string>
    <string name="stream_end_description">Streaming is ended now</string>
    <string name="enter_comments">Enter comments</string>
    <string name="type_your_message">Type your message</string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_no_secure_decoder"><![CDATA[This device does not provide a secure decoder for <xliff:g id=\"mime_type\">%1$s</xliff:g>]]></string>
    <string name="error_no_decoder"><![CDATA[This device does not provide a decoder for <xliff:g id=\"mime_type\">%1$s</xliff:g>]]></string>
    <string name="error_instantiating_decoder"><![CDATA[Unable to instantiate decoder <xliff:g id=\"decoder_name\">%1$s</xliff:g>]]></string>
    <string name="really_want_exit">Are you sure want to exit?</string>
    <string name="no_stream_found">No Stream found</string>
    <string name="something_wrong_with_the_stream">Something wrong with the stream</string>
    <string name="app_name">Live Streaming</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="no_internet_connection">no internet connection</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="network_failure">Network fail</string>
    <string name="something_wrong">Somthing went wrong</string>
    <string name="okay">Okay</string>
    <string name="retry">Retry</string>
    <string name="error_unsupported_video">unsupported video</string>
    <string name="error_unsupported_audio">unsupported audio</string>
    <string name="storage_permission_denied">storage permission denied</string>
    <string name="reported_successfully">Report sent to successfully</string>
    <string name="join">Join</string>
    <string name="noComments">No Comments</string>
    <string name="add_link_to_the_video">Add a link to this live</string>
    <string name="received_gifts">Received Gifts</string>
    <string name="share">Share</string>
    <string name="watch_live">Watch Live</string>
    <string name="recorded_live">Recorded Live</string>
    <string name="send">Send</string>
    <string name="stickers">Stickers</string>
    <string name="gifts">Gifts</string>
    <string name="not_enough_gems">Not enough gems</string>
    <string name="gift">Gift</string>
    <string name="sent">Sent</string>
    <string name="scrollbottom">Scroll to bottom</string>
    <string name="gifts_received">Gifts Refeceived</string>
    <string name="gifts_by">Gifts By</string>
    <string name="live_text">Go live and fun interacting with other members, please do not violet our community guidelines.</string>
    <string name="vote">Vote</string>
    <string name="votes">Votes</string>

</resources>