<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomParentLay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:fontFamily="@font/font_regular"
            android:text="@string/using_video_capture"
            android:textColor="@color/primarytext" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/frontCameraLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_front_camera" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/font_regular"
                    android:gravity="center"
                    android:text="@string/rear_camera"
                    android:textColor="@color/primarytext" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/backCameraLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_back_camera" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/font_regular"
                    android:gravity="center"
                    android:text="@string/back_camera"
                    android:textColor="@color/primarytext" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>