<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/bottomTopLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/font_regular"
                android:gravity="center"
                android:text="@string/total_viewers"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bottomViewerCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/font_regular"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/viewColor" />

            <RelativeLayout
                android:id="@+id/bottomDurationLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/font_regular"
                    android:padding="15dp"
                    android:text="@string/duration"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_large" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtBottomDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/font_regular"
                    android:padding="15dp"
                    android:text="0:00"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_large" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/bottomLikesLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/font_regular"
                    android:padding="15dp"
                    android:text="@string/total_likes"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_large" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtTotalLikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/font_regular"
                    android:padding="15dp"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_large" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomViewersLay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/font_regular"
                android:text="@string/live_viewers"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bottomRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:scrollbars="none" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>