<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/publishLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77000000">




    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/btnGoLive"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnGoLive"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="70dp"
            android:paddingEnd="10dp"
            android:paddingBottom="80dp">

            <EditText
                android:id="@+id/edtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/font_regular"
                android:hint="@string/what_s_happening"
                android:imeOptions="actionDone"
                android:inputType="textNoSuggestions|textCapSentences"
                android:maxLength="80"
                android:paddingStart="0dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/transparentGrey"
                android:textSize="@dimen/text_medium_large" />

            <EditText
                android:id="@+id/edtLinkVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/font_regular"
                android:hint="@string/add_link_to_the_video"
                android:imeOptions="actionDone"
                android:inputType="textNoSuggestions|textCapSentences"
                android:maxLength="80"
                android:paddingStart="0dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/transparentGrey"
                android:textSize="@dimen/text_medium_large" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_small"
                android:fontFamily="@font/font_bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:lineSpacingExtra="10dp"
                android:background="@drawable/bg_white_outline"
                android:text="@string/live_text"/>


            <RelativeLayout
                android:id="@+id/tipsLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/rounded_solid_white"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/iconTips"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="5dp"
                    android:src="@drawable/tips"
                    android:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtTips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/btnCancelTips"
                    android:layout_toEndOf="@+id/iconTips"
                    android:fontFamily="@font/font_regular"
                    android:maxLines="3"
                    android:padding="10dp"
                    android:text="@string/tips"
                    android:textColor="@color/primarytext"
                    android:textSize="@dimen/text_size_small" />

                <ImageView
                    android:id="@+id/btnCancelTips"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="10dp"
                    android:src="@drawable/cancel"
                    android:visibility="visible" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnGoLive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/curved_gradient"
        android:fontFamily="@font/font_regular"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/go_live"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btnCancel"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerVertical="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="10dp"
        android:src="@drawable/cancel"
        android:visibility="visible"
        app:tint="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>